# event-tracker

./: .gitignore  CMakeLists.txt  LICENSE  README.md
EventTrackerLib/: CMakeLists.txt
EventTrackerLib/src/: DeviceInfo.cpp  EventBuilder.cpp  EventQueue.cpp  EventTracker.cpp  Transporter.cpp
EventTrackerLib/src/include/: DeviceInfo.hpp  DeviceInfoFlags.hpp  EventBuilder.hpp  EventQueue.hpp  EventTracker.hpp  EventTrackerConfig.hpp  EventTrackerPublic.hpp  Transporter.hpp
Server/: .env.example  Dockerfile  docker-compose.yml  requirements.txt
Server/Dashboards/: SampleDashboard.json
Server/src/: auth.py  config.py  db.py  main.py  models.py  redis_client.py  redis_consumer.py
Server/src/utils/: logger.py
TestApp/: CMakeLists.txt  main.cpp
TestApp/BasicApp/: main.cpp
TestApp/LoadApp/: main.cpp
docs/: Readme.md  configuration.md
docs/EventTrackerLib/: Readme.md  api_reference.md  http_payload.md
docs/Server/: Readme.md
